[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/LobbyUI.gd" type="Script" id=1]
[ext_resource path="res://GUI/Data/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://GUI/Assets/Main_UI.png" type="Texture" id=3]
[ext_resource path="res://GUI/Data/title_font.tres" type="DynamicFont" id=4]

[node name="LobbyUI" type="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
texture = ExtResource( 3 )
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTitle" type="Label" parent="TitleScreen"]
anchor_right = 1.0
margin_top = 78.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 4 )
text = "Multiplayer Bomber Man"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TitleScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -308.0
margin_right = 512.0
margin_bottom = -148.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer1" type="HBoxContainer" parent="TitleScreen/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 112.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TitleScreen/VBoxContainer/HBoxContainer1"]
margin_right = 97.0
margin_bottom = 112.0
custom_constants/separation = 32

[node name="LabelName" type="Label" parent="TitleScreen/VBoxContainer/HBoxContainer1/VBoxContainer"]
margin_right = 97.0
margin_bottom = 38.0
text = "Name:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelIP" type="Label" parent="TitleScreen/VBoxContainer/HBoxContainer1/VBoxContainer"]
margin_top = 70.0
margin_right = 97.0
margin_bottom = 108.0
text = "IP:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="TitleScreen/VBoxContainer/HBoxContainer1"]
margin_left = 129.0
margin_right = 1024.0
margin_bottom = 112.0
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="TextName" type="LineEdit" parent="TitleScreen/VBoxContainer/HBoxContainer1/VBoxContainer2"]
margin_right = 895.0
margin_bottom = 48.0
max_length = 20
placeholder_text = "your name"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextIP" type="LineEdit" parent="TitleScreen/VBoxContainer/HBoxContainer1/VBoxContainer2"]
margin_top = 64.0
margin_right = 895.0
margin_bottom = 112.0
max_length = 20
placeholder_text = "the lobby ip to join"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="TitleScreen/VBoxContainer"]
margin_top = 144.0
margin_right = 1024.0
margin_bottom = 188.0
custom_constants/separation = 64

[node name="ButtonHost" type="Button" parent="TitleScreen/VBoxContainer/HBoxContainer2"]
margin_right = 480.0
margin_bottom = 44.0
size_flags_horizontal = 3
disabled = true
text = "Host Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonJoin" type="Button" parent="TitleScreen/VBoxContainer/HBoxContainer2"]
margin_left = 544.0
margin_right = 1024.0
margin_bottom = 44.0
size_flags_horizontal = 3
disabled = true
text = "Join Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTitle" type="Label" parent="StartScreen"]
anchor_right = 1.0
margin_top = 51.0
margin_bottom = 89.0
text = "Waiting for other players or just start game..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StartScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 216.0
margin_right = 512.0
margin_bottom = 530.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPlayerCount" type="Label" parent="StartScreen/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 38.0
text = "Players: 1/4"
align = 1

[node name="ListPlayerNames" type="ItemList" parent="StartScreen/VBoxContainer"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 254.0
rect_min_size = Vector2( 400, 200 )

[node name="HBoxContainer" type="HBoxContainer" parent="StartScreen/VBoxContainer"]
margin_top = 270.0
margin_right = 1024.0
margin_bottom = 314.0
custom_constants/separation = 16

[node name="ButtonStart" type="Button" parent="StartScreen/VBoxContainer/HBoxContainer"]
margin_right = 504.0
margin_bottom = 44.0
size_flags_horizontal = 3
disabled = true
text = "Start Game"

[node name="ButtonCancel" type="Button" parent="StartScreen/VBoxContainer/HBoxContainer"]
margin_left = 520.0
margin_right = 1024.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Cancel Game"

[node name="TextError" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -118.0
margin_bottom = -80.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 0.980392, 0.4, 0.188235, 1 )
text = "You mast have a name!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="text_changed" from="TitleScreen/VBoxContainer/HBoxContainer1/VBoxContainer2/TextName" to="." method="_on_TextName_text_changed"]
[connection signal="text_changed" from="TitleScreen/VBoxContainer/HBoxContainer1/VBoxContainer2/TextIP" to="." method="_on_TextIP_text_changed"]
[connection signal="pressed" from="TitleScreen/VBoxContainer/HBoxContainer2/ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="pressed" from="TitleScreen/VBoxContainer/HBoxContainer2/ButtonJoin" to="." method="_on_ButtonJoin_pressed"]
[connection signal="pressed" from="StartScreen/VBoxContainer/HBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="StartScreen/VBoxContainer/HBoxContainer/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
